--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
         "vue-template-compiler": "^2.6.11"
     },
     "dependencies": {
+        "sweetalert": "^2.1.2",
         "vform": "^1.0.1",
+        "vue-range-component": "^1.0.3",
+        "vue2-gmap-custom-marker": "^5.6.0",
+        "vue2-google-maps": "^0.10.7",
         "vuelidate": "^0.7.5"
     }
 }
